[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-forge-v2"
version = "0.2.0"
description = "Dirty-script normalization task-forge prototype."
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["task_forge_v2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
